--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -1,6 +1,26 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
+        android:id="@+id/menu_map"
+        android:orderInCategory="1"
+        android:showAsAction="always"
+        android:title="@string/actionbar_map"
+        android:icon="@drawable/ic_action_menu_map" />
+    
+    <item
+        android:id="@+id/menu_favourites"
+        android:orderInCategory="2"
+        android:showAsAction="always"
+        android:title="@string/actionbar_favourites"
+        android:icon="@drawable/ic_action_menu_star" />
+        
+    <item
+        android:id="@+id/add_data"
+        android:orderInCategory="50"
+        android:showAsAction="never"
+        android:title="@string/menu_add_data"/>
+    
+    <item
         android:id="@+id/menu_settings"
         android:orderInCategory="100"
         android:showAsAction="never"
