--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,7 +1,35 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame"
+    android:weightSum="2"
+    android:background="@drawable/activity_bck" >
+    
+     <!-- <WebView
+        android:id="@+id/webview_main"
+        android:layout_width="0dip"
+        android:layout_height="fill_parent"
+        android:layout_weight="1" />
+    
+     <ListView
+         android:layout_width="fill_parent"
+         android:layout_height="fill_parent"
+         android:layout_weight="1" >
+         
+     </ListView> -->
+     
+     <Gallery
+         android:id="@+id/Gallery01"
+	     android:layout_width="fill_parent"
+	     android:layout_height="wrap_content" />
+     
+     <ImageSwitcher
+	      android:id="@+id/ImageSwitcher01"
+	      android:layout_width="fill_parent"
+	      android:layout_height="fill_parent"/>     
+     
+     
+</LinearLayout>
