--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -15,6 +15,12 @@
         android:icon="@drawable/ic_action_menu_star" />
         
     <item
+        android:id="@+id/menu_onoff_online_mode"
+        android:orderInCategory="40"
+        android:showAsAction="never"
+        android:title="@string/menu_onoff_online_mode"/>
+    
+    <item
         android:id="@+id/add_data"
         android:orderInCategory="50"
         android:showAsAction="never"
