--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -7,28 +7,26 @@
     android:weightSum="2"
     tools:context=".MainActivity"
     tools:ignore="MergeRootFrame" >
-
     
-     
 	<ImageSwitcher
 		android:id="@+id/ImageSwitcher01"
 		android:layout_width="fill_parent"
-		android:layout_height="fill_parent">
-	</ImageSwitcher>
+		android:layout_height="fill_parent"
+		android:layout_weight="1" />
     
-     <!-- <LinearLayout
+     <LinearLayout
          android:id="@+id/menu_list_layout"
          android:orientation="vertical"
          android:layout_weight="1"
-         android:layout_width="0dip"
+         android:layout_width="fill_parent"
          android:layout_height="fill_parent">         
          
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
-             android:text="Me" />
+             android:text="Buttons will be here" />
          
-     </LinearLayout> -->
+     </LinearLayout>
 
      
 </LinearLayout>
