--- a/res/menu/activity_map.xml
+++ b/res/menu/activity_map.xml
@@ -1,9 +1,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/menu_settings"/>
+        android:id="@+id/map_menu_filter"
+        android:orderInCategory="1"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_action_map_filter"
+        android:title="@string/map_menu_filter"/>
+    
+    <item
+        android:id="@+id/map_menu_nearby"
+        android:orderInCategory="10"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_action_map_nearby"
+        android:title="@string/map_menu_nearby"/>
 
 </menu>
