TravellogNewEntry, fixes, icons, layouts

--- a/res/layout/activity_travellog.xml
+++ b/res/layout/activity_travellog.xml
@@ -1,74 +1,7 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:fillViewport="true">
-
-	<LinearLayout 
-	    android:id="@+id/container"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="vertical"
-	    android:padding="10dp" >	
-	    
-	    <EditText
-	        android:id="@+id/travellog_edit_title"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:hint="@string/travellog_edit_title_placeholder"
-	        android:singleLine="true"/>
-	    
-	    <EditText
-	        android:id="@+id/travellog_edit_text"
-	        android:layout_width="match_parent"
-	        android:layout_height="0dp"
-	        android:layout_weight="1"
-	        android:hint="@string/travellog_edit_title_text"
-	        android:inputType="textMultiLine" />
-	    
-	    <TextView
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="@string/travellog_checkin"/>
-	    
-	    <Button
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:text="@string/travellog_detect_location" />
-	    
-	    <TextView
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="@string/travellog_share_options"/>
-	    
-	    <LinearLayout
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:orientation="horizontal">
-	        
-		    <Switch
-		        android:id="@+id/travellog_switch_share_vk"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:text="@string/vk" />
-	        
-		    <Switch
-		        android:id="@+id/travellog_switch_share_fb"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:text="@string/fb" />
-	        
-		    <!-- <Switch
-		        android:id="@+id/travellog_switch_share_4sq"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:text="@string/sq" /> -->	    
-	    </LinearLayout>
-	    
-	    <TextView 
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        android:text="@string/travellog_info"/>
-		    
-	</LinearLayout>
-
-</ScrollView>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".TravellogActivity"
+    tools:ignore="MergeRootFrame" />
