--- a/res/menu/activity_travellog.xml
+++ b/res/menu/activity_travellog.xml
@@ -1,9 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/menu_settings"/>
+        android:id="@+id/travellog_add_entry"
+        android:orderInCategory="1"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_action_travellog_add_entry"
+        android:title="@string/travellog_add_entry"/>
 
 </menu>
