--- a/res/layout/activity_map.xml
+++ b/res/layout/activity_map.xml
@@ -5,11 +5,17 @@
     android:layout_height="match_parent"
     tools:context=".MapActivity"
     tools:ignore="MergeRootFrame">
-<org.osmdroid.views.MapView
+<!--  <org.osmdroid.views.MapView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/mapview"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:clickable="true" />
+    android:clickable="true" />-->
+    
+    <WebView  xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/mapview"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+/>
 </FrameLayout>
     
