--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,108 +1,121 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="2"
-    tools:context=".MainActivity"
-    tools:ignore="MergeRootFrame"
-    android:background="@drawable/activity_bck" >
-    
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_weight="1" >
-    
-		<ImageSwitcher
-			android:id="@+id/ImageSwitcher01"
-			android:layout_width="fill_parent"
-			android:layout_height="fill_parent"/>	
-		
-		<TextView
-		    android:id="@+id/currency"
-		    style="@style/StrokedText"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_alignParentRight="true"
-		    android:layout_marginRight="10dp"
-		    android:layout_marginTop="10dp"
-		    android:text="1EUR = 99.99RUR" />
-		
-		<TextView
-		    android:id="@+id/weather"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="Thunderstorm\n +50C, 99% hum"
-		    android:layout_alignParentRight="true"
-		    android:layout_alignParentBottom="true"
-		    android:layout_marginRight="10dp"
-		    android:layout_marginBottom="10dp"
-		    style="@style/StrokedText" />
-		
-		<TextView
-		    android:id="@+id/image_caption"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:text="Railway station"
-		    android:layout_alignParentLeft="true"
-		    android:layout_alignParentBottom="true"
-		    android:layout_marginLeft="10dp"
-		    android:layout_marginBottom="10dp"
-		    style="@style/StrokedText" />
-		
-	<!-- 		
-		<View
-	        android:layout_below="@id/ImageSwitcher01"
+    android:layout_height="match_parent">
+
+
+	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	    xmlns:tools="http://schemas.android.com/tools"
+	    android:id="@+id/container"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:orientation="vertical"
+	    android:weightSum="2"
+	    tools:context=".MainActivity"
+	    tools:ignore="MergeRootFrame"
+	    android:background="@drawable/activity_bck" >
+	    
+	    <RelativeLayout
 	        android:layout_width="fill_parent"
-	        android:layout_height="5dip"
-	        android:background="@drawable/drop_shadow" /> -->
-    
-	</RelativeLayout>
-		
-     <LinearLayout
-         android:id="@+id/menu_list_layout"
-         android:orientation="vertical"
-         android:layout_weight="1"
-         android:layout_width="fill_parent"
-         android:layout_height="fill_parent"
-         android:gravity="center">         
-         
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:fontFamily="Roboto"
-             android:text="@string/travelpedia"
-             android:textSize="22sp"
-             android:onClick="openTravelpedia"/>
+	        android:layout_height="fill_parent"
+	        android:layout_weight="1" >
+	    
+			<ImageSwitcher
+				android:id="@+id/ImageSwitcher01"
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"/>	
+			
+			<TextView
+			    android:id="@+id/currency"
+			    style="@style/StrokedText"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:layout_alignParentRight="true"
+			    android:layout_marginRight="10dp"
+			    android:layout_marginTop="10dp"
+			    android:text="1EUR = 99.99RUR" />
+			
+			<TextView
+			    android:id="@+id/weather"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:text="Thunderstorm\n +50C, 99% hum"
+			    android:layout_alignParentRight="true"
+			    android:layout_alignParentBottom="true"
+			    android:layout_marginRight="10dp"
+			    android:layout_marginBottom="10dp"
+			    style="@style/StrokedText" />
+			
+			<TextView
+			    android:id="@+id/image_caption"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:text="Railway station"
+			    android:layout_alignParentLeft="true"
+			    android:layout_alignParentBottom="true"
+			    android:layout_marginLeft="10dp"
+			    android:layout_marginBottom="10dp"
+			    style="@style/StrokedText" />
+			
+		<!-- 		
+			<View
+		        android:layout_below="@id/ImageSwitcher01"
+		        android:layout_width="fill_parent"
+		        android:layout_height="5dip"
+		        android:background="@drawable/drop_shadow" /> -->
+	    
+		</RelativeLayout>
+			
+	     <LinearLayout
+	         android:id="@+id/menu_list_layout"
+	         android:orientation="vertical"
+	         android:layout_weight="1"
+	         android:layout_width="fill_parent"
+	         android:layout_height="fill_parent"
+	         android:gravity="center">         
+	         
+	         <TextView
+	             android:layout_width="wrap_content"
+	             android:layout_height="wrap_content"
+	             android:text="@string/travelpedia"
+	             android:textSize="22sp"
+	             android:onClick="openTravelpedia"/>
+	
+	         
+	         <TextView
+	             android:layout_width="wrap_content"
+	             android:layout_height="wrap_content"
+	             android:text="@string/nearby"
+	             android:textSize="22sp"
+	             android:layout_marginTop="20dp"
+	             android:onClick="openNearby" />
+	         
+	         <TextView
+	             android:layout_width="wrap_content"
+	             android:layout_height="wrap_content"
+	             android:text="@string/practical_info"
+	             android:textSize="22sp"
+	             android:layout_marginTop="20dp" />
+	         
+	         <TextView
+	             android:layout_width="wrap_content"
+	             android:layout_height="wrap_content"
+	             android:text="@string/phrasebook"
+	             android:textSize="22sp"
+	             android:layout_marginTop="20dp" />
+	         
+	     </LinearLayout>
+	</LinearLayout>
 
-         
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:fontFamily="Roboto"
-             android:text="@string/actionbar_nearby"
-             android:textSize="22sp"
-             android:layout_marginTop="20dp"
-             android:onClick="openNearby" />
-         
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:fontFamily="Roboto"
-             android:text="@string/practical_info"
-             android:textSize="22sp"
-             android:layout_marginTop="20dp" />
-         
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:fontFamily="Roboto"
-             android:text="@string/phrasebook"
-             android:textSize="22sp"
-             android:layout_marginTop="20dp" />
-         
-     </LinearLayout>
-
-     
-</LinearLayout>
+	<ListView
+	    android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#111"/>
+	
+</android.support.v4.widget.DrawerLayout>
