--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -61,7 +61,7 @@
                 android:layout_alignParentLeft="true"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="10dp"
-                android:text="Railway station" />
+                android:text="Place your title here" />
         </RelativeLayout>
 
         <LinearLayout
@@ -98,6 +98,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/card_background"
+                android:onClick="openPracticalInfo"
                 android:clickable="true"
                 android:padding="10dip"
                 android:text="@string/practical_info"
@@ -108,6 +109,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/card_background"
+                android:onClick="openPhrasebook"
                 android:clickable="true"
                 android:padding="10dip"
                 android:text="@string/phrasebook"
