--- a/res/menu/activity_map.xml
+++ b/res/menu/activity_map.xml
@@ -4,14 +4,21 @@
         android:id="@+id/map_menu_filter"
         android:orderInCategory="1"
         android:showAsAction="always"
-        android:icon="@drawable/ic_action_map_filter"
+        android:icon="@drawable/ic_action_filter"
         android:title="@string/map_menu_filter"/>
     
     <item
         android:id="@+id/map_menu_nearby"
         android:orderInCategory="10"
         android:showAsAction="always"
-        android:icon="@drawable/ic_action_map_nearby"
+        android:icon="@drawable/ic_action_nearby"
         android:title="@string/map_menu_nearby"/>
+    
+    <item
+        android:id="@+id/map_menu_onoff"
+        android:orderInCategory="100"
+        android:showAsAction="always"
+        android:icon="@drawable/ic_action_map_nearby"
+        android:title="@string/map_menu_onoff"/>
 
 </menu>
