--- a/res/values/tourme_styles.xml
+++ b/res/values/tourme_styles.xml
@@ -26,7 +26,7 @@
 	 <item name="android:background">@drawable/btn_default_holo_light</item>
 	 <item name="android:minHeight">48dip</item>
 	 <item name="android:minWidth">64dip</item>
-	 <item name="android:textColor">#000000</item>
+	 <item name="android:textColor">#FFFFFF</item>
 	</style>
 	
 	<style name="ImageButtonTourMe" parent="android:Widget.ImageButton">
