Add seekbar listener. Fix issues

--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
             
-            <TextView
+            <!-- <TextView
                 android:id="@+id/currency"
                 style="@style/StrokedText"
                 android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_marginBottom="10dp"
                 android:layout_marginRight="10dp"
-                android:text="Thunderstorm\n +50C, 99% hum" />
+                android:text="Thunderstorm\n +50C, 99% hum" /> -->
            
 
             <TextView
