--- a/res/layout/fragment_prepare_2.xml
+++ b/res/layout/fragment_prepare_2.xml
@@ -38,7 +38,9 @@
        	    <SeekBar
 		        android:id="@+id/prepare_2_seekbar"
 		        android:layout_width="fill_parent"
-		        android:layout_height="wrap_content" />	        
+		        android:layout_height="wrap_content"
+		        android:max="300" /> <!-- in kilometers -->
+       	           
 	    </LinearLayout>
 	    
 <!-- 	    <LinearLayout
