--- a/res/layout/fragment_prepare_1.xml
+++ b/res/layout/fragment_prepare_1.xml
@@ -48,6 +48,14 @@
 		android:layout_marginTop="30dp" />
     
     <Button 
+        android:id="@+id/prepare_1_reject"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/prepare_button_reject"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true" />
+    
+    <Button 
         android:id="@+id/prepare_1_next"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
