--- a/res/layout/activity_fragment_container.xml
+++ b/res/layout/activity_fragment_container.xml
@@ -10,14 +10,41 @@
         android:layout_height="fill_parent"/>
    
     <!-- App drawer (left pane) -->
-    <ListView
+	<LinearLayout
+        android:orientation="vertical"
         android:id="@+id/left_drawer"
         android:layout_width="240dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#111"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp" />
+	    android:layout_height="match_parent"
+	    android:layout_gravity="start"
+	    android:background="#111" >
+	    
+	    
+    
+	    <ListView
+	        android:id="@+id/left_drawer_list"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"	        	        
+	        android:choiceMode="singleChoice"
+	        android:divider="@android:color/transparent"
+	        android:dividerHeight="0dp" />
+	    
+	    <View
+		    android:layout_width="220dp"
+		    android:gravity="center"
+		    android:layout_height="1dp"
+		    android:background="#333"/>
+	    
+	    <TextView 
+	        android:id="@+id/drawer_dummy"
+	        android:layout_width="fill_parent"
+        	android:layout_height="wrap_content"
+        	android:text="12378"
+        	android:textSize="14sp"
+        	android:textColor="#CC6600" />
+	    
+    
+    </LinearLayout>
+    
+    
 
 </android.support.v4.widget.DrawerLayout>
