--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -117,14 +117,28 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/left_drawer"
-        android:layout_width="240dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="#111"
-        android:choiceMode="singleChoice"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="0dp" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:id="@+id/drawer"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+    
+	    <ListView
+	        android:id="@+id/left_drawer"
+	        android:layout_width="240dp"
+	        android:layout_height="match_parent"
+	        android:layout_gravity="start"
+	        android:background="#111"
+	        android:choiceMode="singleChoice"
+	        android:divider="@android:color/transparent"
+	        android:dividerHeight="0dp" />
+	    
+	    <TextView 
+	        android:id="@+id/drawer_dummy"
+	        android:layout_width="fill_parent"
+        	android:layout_height="wrap_content"
+        	android:text="123" />
+    
+    </LinearLayout>
 
 </android.support.v4.widget.DrawerLayout>
