Add ArticleActivity progress bar for page loading; add new item to drawer (now with little bug)

--- a/res/layout/activity_article.xml
+++ b/res/layout/activity_article.xml
@@ -7,6 +7,14 @@
     <WebView
         android:id="@+id/articleWebView"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:visibility="invisible" />
+
+    <ProgressBar
+        android:id="@+id/article_progressbar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+		android:layout_centerInParent="true" />
 
 </RelativeLayout>
