Add platform dependenct for WebView bug; Fix CSS

--- a/assets/css/leaflet.css
+++ b/assets/css/leaflet.css
@@ -385,7 +385,7 @@
 	}
 .leaflet-popup-content-wrapper {
 	padding: 1px;
-	text-align: left;
+	text-align: center;
 	-webkit-border-radius: 5px;
 	        border-radius: 5px;
 	}
