--- a/res/menu/activity_article.xml
+++ b/res/menu/activity_article.xml
@@ -1,9 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/menu_settings"
+        android:id="@+id/article_activity_show_on_map"
         android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/menu_settings"/>
+        android:icon="@drawable/ic_action_menu_map"
+        android:showAsAction="always"
+        android:title="@string/menu_article_activity_show_on_map"/>
 
 </menu>
