--- a/res/layout/activity_map.xml
+++ b/res/layout/activity_map.xml
@@ -1,5 +1,18 @@
-<WebView
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+   <com.nutiteq.MapView
+    android:id="@+id/mapView"
+    android:layout_width="fill_parent" 
+    android:layout_height="fill_parent" 
+    />
+</LinearLayout>
+
+<!-- <WebView
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/mapview"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent" />
+ -->
