--- a/res/layout/fragment_prepare_2.xml
+++ b/res/layout/fragment_prepare_2.xml
@@ -17,12 +17,13 @@
 		        android:layout_height="wrap_content"
 		        android:text="@string/prepare_2_text" />
 	    
-	    <WebView
-	        android:id="@+id/prepare_2_webview"
-	        android:layout_width="fill_parent"
-	        android:layout_height="180dp"
-	        android:layout_marginTop="10dp"/>
-	    
+		<com.nutiteq.MapView
+			android:id="@+id/prepare_2_mapView"
+			android:layout_width="fill_parent" 
+			android:layout_height="180dp"
+			android:layout_marginTop="10dp"
+			/>
+
 	    <LinearLayout
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
