--- a/res/layout/item_pager_image.xml
+++ b/res/layout/item_pager_image.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:padding="1dip" >
+    android:layout_height="fill_parent">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:adjustViewBounds="true"
-        android:contentDescription="123" />
+        android:adjustViewBounds="true"/>
 
     <ProgressBar
         android:id="@+id/loading"
@@ -18,5 +16,16 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:visibility="gone" />
+    
+    <TextView
+		android:id="@+id/image_caption"
+		style="@style/StrokedText"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_alignParentBottom="true"
+		android:layout_alignParentLeft="true"
+		android:layout_marginBottom="10dp"
+		android:layout_marginLeft="10dp"
+		android:maxLength="50"/>
 
-</FrameLayout>
+</RelativeLayout>
