--- a/res/menu/activity_travellog_new_post.xml
+++ b/res/menu/activity_travellog_new_post.xml
@@ -4,7 +4,7 @@
         android:id="@+id/travellog_post_send"
         android:orderInCategory="1"
         android:showAsAction="always"
-        android:icon="@drawable/ic_action_send"
+        android:icon="@drawable/ic_action_content_save"
         android:title="@string/travellog_post_send"/>
 
 </menu>
