--- a/TourMe/src/main/res/layout/activity_travellog.xml
+++ b/TourMe/src/main/res/layout/activity_travellog.xml
@@ -4,4 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TravellogActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame">
+
+	<ListView
+		android:id="@android:id/list"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content" >
+
+	</ListView>
+
+</FrameLayout>
