--- a/TourMe/src/main/res/layout/activity_travellog_new_post.xml
+++ b/TourMe/src/main/res/layout/activity_travellog_new_post.xml
@@ -9,21 +9,14 @@
 	    android:layout_height="wrap_content"
 	    android:orientation="vertical"
 	    android:padding="10dp" >	
-<!-- 	    
-	    <EditText
-	        android:id="@+id/travellog_edit_title"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:hint="@string/travellog_edit_title_placeholder"
-	        android:singleLine="true"/> -->
-	    
+
 	    <EditText
 	        android:id="@+id/travellog_edit_text"
 	        android:layout_width="match_parent"
 	        android:layout_height="0dp"
 	        android:layout_weight="1"
 	        android:hint="@string/travellog_edit_title_text"
-	        android:inputType="textMultiLine"
+	        android:inputType="textMultiLine|textCapSentences"
 	        android:gravity="top|left" />
 	    
 	    <TextView
