--- a/TourMe/src/main/res/layout/travellog_list_item.xml
+++ b/TourMe/src/main/res/layout/travellog_list_item.xml
@@ -16,13 +16,13 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:textSize="18sp"
-			android:text="123"/>
+			android:textIsSelectable="false"/>
 
 		<TextView
 			android:id="@+id/travellog_list_item_location"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="123"/>
+			android:textIsSelectable="false"/>
 
 	</LinearLayout>
 
@@ -34,6 +34,7 @@
 		android:layout_alignParentRight="true"
 		android:layout_alignParentTop="true"
 		android:layout_marginLeft="5dp"
-		android:text="234"/>
+		android:textIsSelectable="false"
+		/>
 
 </RelativeLayout>
