--- a/TourMe/src/main/res/layout/activity_travellog.xml
+++ b/TourMe/src/main/res/layout/activity_travellog.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".TravellogActivity"
     tools:ignore="MergeRootFrame"
-	android:descendantFocusability="blocksDescendants">
+	android:focusable="false"
+	android:focusableInTouchMode="false">
 
 	<ListView
 		android:id="@android:id/list"
