--- a/TourMe/src/main/res/layout/activity_travellog_new_post.xml
+++ b/TourMe/src/main/res/layout/activity_travellog_new_post.xml
@@ -20,6 +20,7 @@
 	        android:gravity="top|left" />
 	    
 	    <TextView
+			android:id="@+id/travellog_location_title"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:paddingTop="10dp"
