--- a/TourMe/src/main/res/layout/activity_home.xml
+++ b/TourMe/src/main/res/layout/activity_home.xml
@@ -154,6 +154,7 @@
 
 
 			<RelativeLayout
+                android:id="@+id/fragment_home_currency"
 				android:layout_width="match_parent"
 				android:layout_height="75dp"
 				android:layout_marginTop="10dp"
