--- a/TourMe/src/main/res/layout/activity_home.xml
+++ b/TourMe/src/main/res/layout/activity_home.xml
@@ -200,17 +200,125 @@
 			</RelativeLayout>
 
 
-            <TextView
-                android:gravity="center"
-                android:layout_width="fill_parent"
-                android:layout_height="750dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/card_background"
-                android:clickable="true"
-                android:padding="10dip"
-                android:layout_weight="1"
-                android:textSize="22sp" />
 
+
+
+
+
+            <RelativeLayout
+                android:id="@+id/fragment_home_country_info"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:padding="10dp"
+                android:background="@drawable/card_background">
+
+                <LinearLayout
+                    android:id="@+id/fragment_home_country_names"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/fragment_home_country_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textSize="22sp"
+                        android:text="Rossiya"/>
+
+                    <TextView
+                        android:id="@+id/fragment_home_country_name_more"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:textSize="16sp"
+                        android:textColor="@color/dark_gray"
+                        android:text="Россия, rossiya, RU, Russian Federation"/>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/population"/>
+
+                    <TextView
+                        android:id="@+id/fragment_home_country_population"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/phone_code"/>
+
+                    <TextView
+                        android:id="@+id/fragment_home_country_phone_code"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"/>
+
+                </LinearLayout>
+
+
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/domain"/>
+
+                    <TextView
+                        android:id="@+id/fragment_home_country_domain"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"/>
+
+                </LinearLayout>
+
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/languages"/>
+
+                    <TextView
+                        android:id="@+id/fragment_home_country_language"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"/>
+
+                </LinearLayout>
+
+             </LinearLayout>
+
+            </RelativeLayout>
             
         </LinearLayout>
     </LinearLayout>
