Change currency view logic, fix ArticleActivity

--- a/TourMe/src/main/res/layout/activity_home.xml
+++ b/TourMe/src/main/res/layout/activity_home.xml
@@ -80,6 +80,7 @@
             android:padding="10dip">
 
 			<RelativeLayout
+                android:id="@+id/fragment_home_currency_view"
 				android:layout_width="match_parent"
 				android:layout_height="75dp"
 				android:background="@drawable/card_background">
