--- a/TourMe/src/main/res/layout/activity_fragment_container.xml
+++ b/TourMe/src/main/res/layout/activity_fragment_container.xml
@@ -1,62 +1,23 @@
-<android.support.v4.widget.DrawerLayout
-	xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-	>
+<android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swipe_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/default_activity">
 
-    <!-- Fragment container -->
-    <FrameLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-		/>
-   
-    <!-- App drawer (left pane) -->
-	<RelativeLayout
-        android:orientation="vertical"
-        android:id="@+id/left_drawer"
-        android:layout_width="260dp"
-	    android:layout_height="match_parent"
-	    android:layout_gravity="start"
-	    android:background="#111"
-        android:fitsSystemWindows="true"
-        android:clipToPadding="true"
+    <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-		>
-    
-	    <ListView
-	        android:id="@+id/left_drawer_list"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"	        	        
-	        android:choiceMode="singleChoice"
-	        android:divider="@android:color/transparent"
-	        android:dividerHeight="0dp"
+        <LinearLayout
+                android:id="@+id/fragment_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-			/>
-	    
-	    <View
-	        android:id="@+id/drawer_divider"
-	        android:layout_below="@+id/left_drawer_list"
-		    android:layout_width="220dp"
-		    android:layout_centerHorizontal="true"
-		    android:layout_height="1dp"
-		    android:background="#222"/>
-	    
-   	   <ListView
-	        android:id="@+id/left_drawer_list_service"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"	        	        
-	        android:choiceMode="singleChoice"
-	        android:divider="@android:color/transparent"
-	        android:dividerHeight="0dp"
-	        android:layout_below="@+id/drawer_divider"
-	        android:listSelector="#111"
-	        android:cacheColorHint="#111" />
-	    
-    
-    </RelativeLayout>
-    
-    
+        </LinearLayout>
 
-</android.support.v4.widget.DrawerLayout>
+    </ScrollView>
+
+</android.support.v4.widget.SwipeRefreshLayout>
+
