--- a/TourMe/src/main/res/layout/activity_map.xml
+++ b/TourMe/src/main/res/layout/activity_map.xml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+    android:id="@+id/mapView_container"
+    android:layout_width="match_parent"
+    android:layout_height="550dp"
     android:orientation="vertical" >
     
    <com.nutiteq.MapView
     android:id="@+id/mapView"
-    android:layout_width="fill_parent" 
-    android:layout_height="fill_parent" 
-    />
-</LinearLayout>
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"/>
 
-<!-- <WebView
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/mapview"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent" />
- -->
+</LinearLayout>
