--- a/TourMe/src/main/res/values/tourme_styles.xml
+++ b/TourMe/src/main/res/values/tourme_styles.xml
@@ -72,4 +72,12 @@
 	</style>
 
 
+    <style name="TourMeCard">
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:padding">10dp</item>
+    </style>
+
+
 </resources>
